# Neon-Physics-FLUXION

./: .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  build_windows.bat  final_status.txt  output.def  requirements.txt  setup.py  simple_example_circuit.json  simple_example_result.json
HAPR_fluxion_v4/: Cargo.toml  README.md  pyproject.toml  run_tests.py
HAPR_fluxion_v4/benchmarks/: run_benchmarks.py
HAPR_fluxion_v4/config/: default.yaml
HAPR_fluxion_v4/docs/: ALGORITHM.md
HAPR_fluxion_v4/notebooks/: kaggle_quickstart.ipynb
HAPR_fluxion_v4/python/: cli.py
HAPR_fluxion_v4/python/fluxion/: __init__.py  benchmark.py  engine.py  legalizer.py  visualizer.py
HAPR_fluxion_v4/shaders/: congestion.wgsl  forces.wgsl  sort.wgsl
HAPR_fluxion_v4/src/: config.rs  lib.rs  main.rs
HAPR_fluxion_v4/src/algorithm/: attention.rs  congestion.rs  mod.rs  partitioner.rs  placer.rs  refiner.rs
HAPR_fluxion_v4/src/data/: circuit.rs  grid.rs  hierarchy.rs  mod.rs  placement.rs
HAPR_fluxion_v4/src/gpu/: buffers.rs  context.rs  dispatch.rs  mod.rs
HAPR_fluxion_v4/src/parser/: blif.rs  bookshelf.rs  def.rs  lef.rs  mod.rs
HAPR_fluxion_v4/tests/: test_integration.py
HAPR_fluxion_v4/tests/fixtures/: small.blif
benchmarks/: run_benchmarks.py  run_industry_benchmarks.py
benchmarks/samples/: fluxion_sample.pl  fluxion_sample.scl
examples/: run_fluxion.py  run_million_gates.py  simple_circuit.py
examples/kaggle/: kaggle_fluxion_run.ipynb
fluxion_output/: positions.csv
neon_old_codebase/: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  README.md  git_status_now.txt  test_docx.py
neon_old_codebase/benchmarks/: run_industry_benchmarks.py
neon_old_codebase/benchmarks/samples/: fluxion_sample.aux  fluxion_sample.nets  fluxion_sample.nodes
neon_old_codebase/examples/: animate_placement.py
neon_old_codebase/fluxion_output/: positions.csv
neon_old_codebase/src/cpp/: BarnesHutTree.h  FluxionEngine.h  V3FluxionExport.h
neon_old_codebase/src/python/fluxion/: __init__.py  barnes_hut.py  cli.py  force_fields.py  gpu_accelerator.py  grid.py  lef_library.py  legalizer.py  particle_system.py  tpe.py
neon_old_codebase/src/python/fluxion/benchmarks/: __init__.py  benchmark_runner.py
neon_old_codebase/tests/python/: test_benchmarks.py  test_discovery.py
src/cpp/: BarnesHutTree.cpp  FluxionEngine.cpp  V3FluxionExport.cpp
src/python/fluxion/: __init__.py  annealing.py  barnes_hut.py  cli.py  def_exporter.py  force_congestion.py  force_density.py  force_electrostatic.py  force_fields.py  gpu_accelerator.py  lef_library.py  particle_system.py  percolation.py  spatial_hash.py  tpe.py  validate_world_ready.py  verify.py
src/python/fluxion/benchmarks/: benchmark_runner.py  blif_parser.py  bookshelf_parser.py  lefdef_parser.py
tests/python/: test_congestion.py  test_fluxion.py
