[package]
name = "fluxion"
version = "4.0.0"
edition = "2021"
authors = ["N. Mohana Krishna"]
description = "FLUXION v4 — HAPR: Hierarchical Attention Placement with Routing"
license = "MIT"

[lib]
name = "fluxion"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "fluxion"
path = "src/main.rs"

[dependencies]
# GPU compute (works on ANY GPU via Vulkan/Metal/DX12)
wgpu = "0.19"
bytemuck = { version = "1.14", features = ["derive"] }
pollster = "0.3"          # block_on for async wgpu

# File parsing & config
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

# Math — sparse linear algebra for spectral partitioning
nalgebra = "0.32"
nalgebra-sparse = "0.9"
rayon = "1.8"             # parallel iterators
rand = "0.8"

# Logging
log = "0.4"
env_logger = "0.10"

# Python bindings (optional, for maturin build)
pyo3 = { version = "0.20", features = ["extension-module"], optional = true }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Progress bar
indicatif = "0.17"

[features]
default = []
python = ["pyo3"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
